--- a/Credit_cards.ipynb
+++ b/Credit_cards.ipynb
@@ -17,6 +17,7 @@
    },
    "outputs": [],
    "source": [
+    "# Importing libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -272,6 +273,7 @@
     }
    ],
    "source": [
+    "# Data from excel file to data frame\n",
     "df = pd.read_excel('Credit_cards_App_data.xlsx')\n",
     "df.head()"
    ]
